namespace Mona.SDK.Brains.Tiles.Conditions.Enums
{
    public enum MonaInputType
    {
        None = 0,
        Jump = 1,
        Move = 2,
        Action = 3,
        Sprint = 4,
        Interact = 5,
        Look = 6,
        SwitchCamera = 7,
        Respawn = 8,
        Debug = 9,
        ToggleUI = 10,
        EmoteWheel = 11,
        EmojiTray = 12,
        ToggleNametags = 13,
        Escape = 14,
        OpenChat = 15,
        ToggleMouseCapture = 16
    }
}